test_regress/t/t_class_param_subtype_bad_paren.out
%Error: t/t_class_param_subtype.v:29:5: Reference to parameterized class without #() (IEEE 1800-2017 8.25.1)
                                      : ... Suggest use 'CParam#()'
   29 |     CParam::type_t val_0 = 100;
      |     ^~~~~~
%Error: Exiting due to
